--- a/log.properties
+++ b/log.properties
@@ -14,11 +14,11 @@ log4j.appender.stderr.File=stderr.txt
 log4j.appender.stderr.MaxFileSize = 9MB
 log4j.appender.stderr.MaxBackupIndex = 100
 log4j.appender.stderr.layout=org.apache.log4j.PatternLayout
-log4j.appender.stderr.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
+log4j.appender.stderr.layout.ConversionPattern=%d{[HH:mm:ss:SSS]|[MM-dd-yyyy]}]|[%t] [%c{10}][%p]:%m|%n
 
 log4j.appender.stdout=org.apache.log4j.RollingFileAppender
 log4j.appender.stdout.File=stdout.txt
 log4j.appender.stdout.MaxFileSize = 9MB
 log4j.appender.stdout.MaxBackupIndex = 100
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
+log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1} - %m%n
